Update last commit, incorrectly not updated before.